--- a/build.gradle
+++ b/build.gradle
@@ -19,10 +19,16 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
+    // https://mvnrepository.com/artifact/org.springframework.session/spring-session-data-redis
+    implementation("org.springframework.session:spring-session-data-redis:3.4.2")
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     // https://mvnrepository.com/artifact/org.springframework.session/spring-session-data-redis
     implementation("org.springframework.session:spring-session-data-redis:3.4.2")
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
